--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextcloud-l10n",
+  "name": "@nextcloud/l10n",
   "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
@@ -13,19 +13,24 @@
   "keywords": [
     "nextcloud"
   ],
+  "homepage": "https://github.com/nextcloud/nextcloud-l10n#readme",
   "author": "Christoph Wurst",
   "license": "GPL-3.0-or-later",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nextcloud/nextcloud-l10n"
+  },
   "dependencies": {
-    "core-js": "^3.1.4"
+    "core-js": "3.1.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.5",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-typescript": "7.3.3",
+    "@nextcloud/typings": "^0.1.1",
     "browserslist-config-nextcloud": "0.0.1",
-    "nextcloud-typings": "0.0.10",
-    "typescript": "^3.5.2"
+    "typescript": "3.5.2"
   },
   "browserslist": [
     "extends browserslist-config-nextcloud"
