--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --source-maps && tsc --emitDeclarationOnly",
-    "build:doc": "typedoc --out dist/doc lib && touch dist/doc/.nojekyll",
+    "build:doc": "typedoc --excludeNotExported --mode file --out dist/doc lib/index.ts && touch dist/doc/.nojekyll",
     "check-types": "tsc",
     "dev": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --watch",
     "test": "jest",
@@ -31,10 +31,10 @@
     "@babel/preset-env": "7.7.7",
     "@babel/preset-typescript": "7.7.7",
     "@nextcloud/browserslist-config": "^1.0.0",
-    "@nextcloud/typings": "^0.1.3",
+    "@nextcloud/typings": "^0.1.5",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
-    "typedoc": "^0.15.5",
+    "typedoc": "^0.15.6",
     "typescript": "3.7.4"
   },
   "browserslist": [
