--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --source-maps && tsc --emitDeclarationOnly",
-    "build:doc": "typedoc --excludeNotExported --mode file --out dist/doc lib/index.ts && touch dist/doc/.nojekyll",
+    "build:doc": "typedoc --excludeNotExported --mode file --out dist/doc lib && touch dist/doc/.nojekyll",
     "check-types": "tsc",
     "dev": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --watch",
     "test": "jest",
@@ -23,7 +23,8 @@
     "url": "https://github.com/nextcloud/nextcloud-l10n"
   },
   "dependencies": {
-    "core-js": "3.6.4"
+    "core-js": "3.6.4",
+    "node-gettext": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -32,7 +33,10 @@
     "@babel/preset-typescript": "7.8.3",
     "@nextcloud/browserslist-config": "^1.0.0",
     "@nextcloud/typings": "^0.1.6",
+    "@types/node-gettext": "^2.0.1",
     "babel-jest": "^25.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "gettext-parser": "^4.0.2",
     "jest": "^25.1.0",
     "typedoc": "^0.16.7",
     "typescript": "3.7.5"
