--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "html-entities": "^2.1.1",
     "node-gettext": "^3.0.0"
   },
   "devDependencies": {
