--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
+    "@happy-dom/jest-environment": "^8.1.0",
     "@nextcloud/browserslist-config": "^2.2.0",
     "@nextcloud/typings": "^1.0.0",
     "@types/node-gettext": "^3.0",
@@ -43,5 +44,8 @@
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
-  ]
+  ],
+  "jest": {
+    "testEnvironment": "@happy-dom/jest-environment"
+  }
 }
