--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/index.js"
+    },
+    "./dist/gettext": {
+      "import": "./dist/esm/gettext.js",
+      "require": "./dist/gettext.js"
+    }
+  },
   "scripts": {
-    "build": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --source-maps && tsc --emitDeclarationOnly",
+    "build": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --source-maps && tsc",
     "build:doc": "typedoc --excludeNotExported --mode file --out dist/doc lib && touch dist/doc/.nojekyll",
-    "check-types": "tsc",
+    "check-types": "tsc --noEmit",
     "dev": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --watch",
     "test": "jest",
     "test:watch": "jest --watchAll"
@@ -27,12 +37,12 @@
     "node-gettext": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@happy-dom/jest-environment": "^8.1.0",
-    "@nextcloud/browserslist-config": "^2.2.0",
+    "@nextcloud/browserslist-config": "^2.3.0",
     "@nextcloud/typings": "^1.0.0",
     "@types/node-gettext": "^3.0",
     "babel-jest": "^27.2.1",
@@ -40,7 +50,7 @@
     "gettext-parser": "^4.0.3",
     "jest": "^27.2.1",
     "typedoc": "^0.23.10",
-    "typescript": "^4.0.2"
+    "typescript": "^4.9.4"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
