Provide `translate` and `translatePlural` functions
* Provide both functions, code is mostly taken from server
  some minor cleanup
* Added test cases
* Added *not* exported `registry` module for loading
  translations (so this is not exposed to users)

Signed-off-by: Ferdinand Thiessen <rpm@fthiessen.de>

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "dompurify": "^2.4.1",
+    "escape-html": "^1.0.3",
     "node-gettext": "^3.0.0"
   },
   "devDependencies": {
