Provide all translation related frontend methods
* This provides all functions previously available within
  the `OC.L10N` namespace
* Including translation regestry functions and translation bundle
  loading
* Restructured the source files for better comprehensibility

Signed-off-by: Ferdinand Thiessen <rpm@fthiessen.de>

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/nextcloud/nextcloud-l10n"
   },
   "dependencies": {
+    "@nextcloud/router": "^2.0.0",
     "core-js": "^3.6.4",
     "dompurify": "^2.4.1",
     "escape-html": "^1.0.3",
