--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     }
   },
   "scripts": {
-    "build": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --source-maps && tsc",
+    "build": "tsc && tsc --project tsconfig.cjs.json",
     "build:doc": "typedoc --excludeNotExported --mode file --out dist/doc lib && touch dist/doc/.nojekyll",
     "check-types": "tsc --noEmit",
-    "dev": "babel ./lib --out-dir dist --extensions '.ts,.tsx' --watch",
+    "check-es-compat": "npm run build && check-es-compat dist/*.js",
+    "dev": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
@@ -40,16 +41,11 @@
     "node-gettext": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
     "@happy-dom/jest-environment": "^8.1.0",
     "@nextcloud/browserslist-config": "^2.3.0",
     "@nextcloud/typings": "^1.0.0",
     "@types/node-gettext": "^3.0",
-    "babel-jest": "^27.2.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "check-es-compat": "^2.2.0",
     "gettext-parser": "^4.0.3",
     "jest": "^27.2.1",
     "typedoc": "^0.23.10",
