--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,7 +1,7 @@
 {
     "extends": "./tsconfig.common.json",
     "compilerOptions": {
-        "module": "ES2020",
-        "outDir": "./dist/esm",
+        "module": "CommonJS",
+        "outDir": "./dist",
     }
 }
