--- a/package.json
+++ b/package.json
@@ -35,28 +35,25 @@
   },
   "dependencies": {
     "@nextcloud/router": "^2.0.0",
-    "core-js": "^3.6.4",
     "dompurify": "^2.4.1",
     "escape-html": "^1.0.3",
     "node-gettext": "^3.0.0"
   },
   "devDependencies": {
-    "@happy-dom/jest-environment": "^8.1.0",
     "@nextcloud/browserslist-config": "^2.3.0",
     "@nextcloud/typings": "^1.0.0",
     "@types/node-gettext": "^3.0",
     "check-es-compat": "^2.2.0",
-    "gettext-parser": "^4.0.3",
-    "jest": "^27.2.1",
+    "gettext-parser": "^6.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typedoc": "^0.23.10",
     "typescript": "^4.9.4"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
   ],
-  "jest": {
-    "testEnvironment": "@happy-dom/jest-environment"
-  },
   "engines": {
     "node": "^16.0.0",
     "npm": "^7.0.0 || ^8.0.0"
