👷 Add type checking and browser compatibility to CI tests
Signed-off-by: Ferdinand Thiessen <rpm@fthiessen.de>

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -45,6 +45,14 @@ jobs:
           npm ci
           npm run build
 
+      - name: Check typings
+        run: |
+          npm run check-types
+ 
+      - name: Check browser compatibility
+        run: |
+          npm run check-es-compat
+
       - name: npm test
         run: |
           npm test
