--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "tsc && tsc --project tsconfig.cjs.json",
-    "build:doc": "typedoc --excludeNotExported --mode file --out dist/doc lib && touch dist/doc/.nojekyll",
+    "build:doc": "typedoc && touch dist/doc/.nojekyll",
     "check-types": "tsc --noEmit",
     "check-es-compat": "npm run build && check-es-compat dist/*.js",
     "dev": "tsc --watch",
@@ -43,6 +43,7 @@
     "@nextcloud/browserslist-config": "^2.3.0",
     "@nextcloud/typings": "^1.0.0",
     "@types/node-gettext": "^3.0",
+    "@zamiell/typedoc-plugin-not-exported": "^0.2.0",
     "check-es-compat": "^2.2.0",
     "gettext-parser": "^6.0.0",
     "jest": "^29.3.1",
