--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     },
-    "./dist/gettext": {
-      "import": "./dist/esm/gettext.js",
+    "./gettext": {
+      "import": "./dist/gettext.mjs",
       "require": "./dist/gettext.js"
     }
   },
   "scripts": {
-    "build": "tsc && tsc --project tsconfig.cjs.json",
+    "build": "rollup -c",
     "build:doc": "typedoc && touch dist/doc/.nojekyll",
+    "check-es-compat": "check-es-compat dist/*.js",
     "check-types": "tsc --noEmit",
-    "check-es-compat": "npm run build && check-es-compat dist/*.js",
-    "dev": "tsc --watch",
+    "dev": "rollup -c -w",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
@@ -42,15 +42,17 @@
   "devDependencies": {
     "@nextcloud/browserslist-config": "^2.3.0",
     "@nextcloud/typings": "^1.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/node-gettext": "^3.0",
     "@zamiell/typedoc-plugin-not-exported": "^0.2.0",
     "check-es-compat": "^2.2.0",
     "gettext-parser": "^6.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "rollup": "^3.9.1",
     "ts-jest": "^29.0.3",
-    "typedoc": "^0.23.10",
-    "typescript": "^4.9.4"
+    "tslib": "^2.4.1",
+    "typedoc": "^0.23.23"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
