--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,18 @@
 {
-    "extends": "./tsconfig.common.json",
+    "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
+        "target": "ES2020",
         "module": "ES2020",
-        "outDir": "./dist/esm",
-    }
+        "declaration": true,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "noImplicitAny": false,
+        "outDir": "./dist",
+        "strict": true,
+        "lib": [
+            "es6",
+            "dom"
+        ]
+    },
+    "exclude": ["./dist"]
 }
