fix(build): Set target to ES2019 as we still support Safari 12.x
Signed-off-by: Ferdinand Thiessen <rpm@fthiessen.de>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "ES2019", // ES2020 requires Safari 13+
         "module": "ES2020",
         "declaration": true,
         "esModuleInterop": true,
