--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gettext-parser": "^6.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "mock-xmlhttprequest": "^8.1.0",
     "rollup": "^3.9.1",
     "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
