fix: Add the typings to the package exports so typescript with node16 resolution works
Signed-off-by: Ferdinand Thiessen <opensource@fthiessen.de>

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     },
     "./gettext": {
+      "types": "./dist/gettext.d.ts",
       "import": "./dist/gettext.mjs",
       "require": "./dist/gettext.js"
     }
