--- a/package.json
+++ b/package.json
@@ -2,26 +2,25 @@
   "name": "@nextcloud/l10n",
   "version": "2.2.0",
   "description": "Nextcloud L10n helpers for apps and libraries",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs"
     },
     "./gettext": {
       "types": "./dist/gettext.d.ts",
       "import": "./dist/gettext.mjs",
-      "require": "./dist/gettext.js"
+      "require": "./dist/gettext.cjs"
     }
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "vite --mode production build",
     "build:doc": "typedoc && touch dist/doc/.nojekyll",
-    "check-es-compat": "check-es-compat dist/*.js",
-    "check-types": "tsc --noEmit",
-    "dev": "rollup -c -w",
+    "dev": "vite --mode development build --watch",
     "lint": "eslint .",
     "lint:fix": "eslint --fix lib tests",
     "test": "jest --verbose",
@@ -48,8 +47,9 @@
   "devDependencies": {
     "@nextcloud/browserslist-config": "^3.0.0",
     "@nextcloud/eslint-config": "^8.3.0",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/jest": "^29.5.12",
+    "@nextcloud/vite-config": "^1.2.2",
+    "@types/dompurify": "^3.0.5",
+    "@types/escape-html": "^1.0.4",
     "@types/node-gettext": "^3.0",
     "@zamiell/typedoc-plugin-not-exported": "^0.2.0",
     "check-es-compat": "^3.2.1",
@@ -57,10 +57,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mock-xmlhttprequest": "^8.3.0",
-    "rollup": "^4.16.0",
-    "ts-jest": "^29.1.2",
-    "tslib": "^2.6.2",
-    "typedoc": "^0.25.13"
+    "typedoc": "^0.25.13",
+    "vite": "^5.2.10"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
