--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,16 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
+    "include": ["lib/", "*.ts"],
     "compilerOptions": {
-        "target": "ES2019", // ES2020 requires Safari 13+
-        "module": "ES2020",
+        "target": "ESNext",
+        "module": "ESNext",
         "declaration": true,
-        "esModuleInterop": true,
         "moduleResolution": "Bundler",
-        "noImplicitAny": false,
         "outDir": "./dist",
         "strict": true,
         "lib": [
             "es6",
             "dom"
         ]
-    },
-    "exclude": ["./dist", "./tests"]
+    }
 }
