--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "dev": "vite --mode development build --watch",
     "lint": "eslint .",
     "lint:fix": "eslint --fix lib tests",
-    "test": "jest --verbose",
-    "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage"
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "nextcloud"
@@ -40,6 +40,8 @@
   "dependencies": {
     "@nextcloud/router": "^3.0.0",
     "@nextcloud/typings": "^1.8.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/escape-html": "^1.0.4",
     "dompurify": "^3.1.0",
     "escape-html": "^1.0.3",
     "node-gettext": "^3.0.0"
@@ -51,14 +53,13 @@
     "@types/dompurify": "^3.0.5",
     "@types/escape-html": "^1.0.4",
     "@types/node-gettext": "^3.0",
+    "@vitest/coverage-v8": "^1.5.0",
     "@zamiell/typedoc-plugin-not-exported": "^0.2.0",
-    "check-es-compat": "^3.2.1",
     "gettext-parser": "^8.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "mock-xmlhttprequest": "^8.3.0",
     "typedoc": "^0.25.13",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "vitest": "^1.5.0"
   },
   "browserslist": [
     "extends @nextcloud/browserslist-config"
