--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "ES2020",
         "declaration": true,
         "esModuleInterop": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Bundler",
         "noImplicitAny": false,
         "outDir": "./dist",
         "strict": true,
