--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
 			"files": ["**.ts"],
 			"rules": {
 				"no-useless-constructor": "off",
-				"@typescript-eslint/no-useless-constructor": "error"
+				"@typescript-eslint/no-useless-constructor": "error",
+				"jsdoc/require-returns-type": "off"
 			}
 		},
 		{
