--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "@zamiell/typedoc-plugin-not-exported": "^0.3.0",
     "gettext-parser": "^8.0.0",
-    "mock-xmlhttprequest": "^8.4.0",
+    "msw": "^2.7.0",
     "typedoc": "^0.27.5",
     "vite": "^5.4.11",
     "vitest": "^1.5.0"
