--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   "dependencies": {
     "@nextcloud/router": "^3.0.1",
     "@nextcloud/typings": "^1.9.1",
+    "@postalsys/gettext": "^4.0.1",
     "@types/dompurify": "^3.2.0",
     "@types/escape-html": "^1.0.4",
     "dompurify": "^3.2.3",
-    "escape-html": "^1.0.3",
-    "node-gettext": "^3.0.0"
+    "escape-html": "^1.0.3"
   },
   "devDependencies": {
     "@nextcloud/browserslist-config": "^3.0.1",
@@ -52,7 +52,6 @@
     "@nextcloud/vite-config": "^2.2.2",
     "@types/dompurify": "^3.2.0",
     "@types/escape-html": "^1.0.4",
-    "@types/node-gettext": "^3.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@zamiell/typedoc-plugin-not-exported": "^0.3.0",
     "gettext-parser": "^8.0.0",
