chore(dev-deps): pin correct dependency versions
Signed-off-by: Ferdinand Thiessen <opensource@fthiessen.de>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "include": ["lib/", "*.ts"],
-    "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "declaration": true,
-        "moduleResolution": "Bundler",
-        "outDir": "./dist",
-        "strict": true,
-        "lib": [
-            "es6",
-            "dom"
-        ]
-    }
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"include": ["lib/", "*.ts"],
+	"compilerOptions": {
+		"target": "ESNext",
+		"module": "ESNext",
+		"declaration": true,
+		"moduleResolution": "Bundler",
+		"outDir": "./dist",
+		"strict": true,
+		"types": [
+			"vitest"
+		],
+		"lib": [
+			"ESNext",
+			"DOM"
+		]
+	}
 }
