--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "@nextcloud/vite-config": "^2.3.1",
     "@types/dompurify": "^3.2.0",
     "@types/escape-html": "^1.0.4",
+    "@types/node": "^20.17.16",
     "@types/node-gettext": "^3.0.6",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^3.0.4",
     "@zamiell/typedoc-plugin-not-exported": "^0.3.0",
     "gettext-parser": "^8.0.0",
     "mock-xmlhttprequest": "^8.4.0",
