--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "@types/node": "^20.17.16",
     "@types/node-gettext": "^3.0.6",
     "@vitest/coverage-v8": "^3.0.4",
-    "@zamiell/typedoc-plugin-not-exported": "^0.3.0",
     "gettext-parser": "^8.0.0",
     "mock-xmlhttprequest": "^8.4.1",
     "typedoc": "^0.27.6",
+    "typedoc-plugin-missing-exports": "^3.1.0",
     "vite": "^6.0.11",
     "vitest": "^3.0.4"
   },
