refactor(gettext): Drop `node-gettext` dependency and use our translation logic
Instead of relying on a (insecure!) dependency we can reuse our already
implemented logic for translations.
So we reuse the app translation logic also for the gettext based
translations.

1. Allow to pass the translation bundle to our translation functions
2. Convert gettext JSON format to our Nextcloud translation format in
   the GettextBuilder.
3. Wrap the translation function within out gettext wrapper class

For the enduser this should not change anything (except that we do not
have the debug messages `node-gettext` provided).

Co-authored-by: Ferdinand Thiessen <opensource@fthiessen.de>
Co-authored-by: Grigorii K. Shartsev <grigorii.shartsev@nextcloud.com>
Signed-off-by: Ferdinand Thiessen <opensource@fthiessen.de>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,16 @@
 {
 	"extends": [
-		"@nextcloud"
+		"@nextcloud/eslint-config/typescript"
 	],
 	"ignorePatterns": ["dist"],
 	"overrides": [
+		{
+			"files": ["**.ts"],
+			"rules": {
+				"no-useless-constructor": "off",
+				"@typescript-eslint/no-useless-constructor": "error"
+			}
+		},
 		{
 			"files": ["tests/*.js"],
 			"rules": {
