--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "@types/dompurify": "^3.2.0",
     "@types/escape-html": "^1.0.4",
     "dompurify": "^3.2.4",
-    "escape-html": "^1.0.3",
-    "node-gettext": "^3.0.0"
+    "escape-html": "^1.0.3"
   },
   "devDependencies": {
     "@nextcloud/browserslist-config": "^3.0.1",
@@ -52,6 +51,7 @@
     "@nextcloud/vite-config": "^2.3.1",
     "@types/dompurify": "^3.2.0",
     "@types/escape-html": "^1.0.4",
+    "@types/gettext-parser": "^4.0.4",
     "@types/node": "^20.17.16",
     "@types/node-gettext": "^3.0.6",
     "@vitest/coverage-v8": "^3.0.4",
