--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "name": "@nextcloud/l10n",
   "version": "3.1.0",
-  "description": "Nextcloud L10n helpers for apps and libraries",
+  "description": "Nextcloud localization and translation helpers for apps and libraries",
+  "keywords": [
+    "nextcloud",
+    "l10n",
+    "localization",
+    "translation",
+    "internationalization"
+  ],
+  "homepage": "https://github.com/nextcloud-libraries/nextcloud-l10n#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nextcloud-libraries/nextcloud-l10n"
+  },
+  "license": "GPL-3.0-or-later",
+  "author": "Nextcloud GmbH and Nextcloud contributors",
   "type": "module",
-  "main": "dist/index.cjs",
-  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -17,6 +29,12 @@
       "require": "./dist/gettext.cjs"
     }
   },
+  "main": "dist/index.cjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "AUTHORS.md",
+    "dist"
+  ],
   "scripts": {
     "build": "vite --mode production build",
     "build:doc": "typedoc && touch dist/doc/.nojekyll",
@@ -24,19 +42,12 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix lib tests",
     "test": "vitest run",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch"
   },
-  "keywords": [
-    "nextcloud"
+  "browserslist": [
+    "extends @nextcloud/browserslist-config"
   ],
-  "homepage": "https://github.com/nextcloud-libraries/nextcloud-l10n#readme",
-  "author": "Christoph Wurst",
-  "license": "GPL-3.0-or-later",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nextcloud-libraries/nextcloud-l10n"
-  },
   "dependencies": {
     "@nextcloud/router": "^3.0.1",
     "@nextcloud/typings": "^1.9.1",
@@ -63,15 +74,8 @@
     "vite": "^6.1.0",
     "vitest": "^3.0.5"
   },
-  "browserslist": [
-    "extends @nextcloud/browserslist-config"
-  ],
   "engines": {
     "node": "^20.0.0",
     "npm": "^10.0.0"
-  },
-  "files": [
-    "CHANGELOG.md",
-    "dist"
-  ]
+  }
 }
