--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@vitest/coverage-v8": "^3.1.4",
     "gettext-parser": "^8.0.0",
     "jsdom": "^26.1.0",
-    "mock-xmlhttprequest": "^8.4.1",
+    "msw": "^2.8.5",
     "typedoc": "^0.28.4",
     "typedoc-plugin-missing-exports": "^4.0.0",
     "vite": "^6.3.5",
