--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dev": "vite --mode development build --watch",
     "lint": "eslint .",
     "lint:fix": "eslint --fix lib tests",
+    "prerelease:format-changelog": "node build/format-changelog.mjs",
     "test": "LANG=en-US vitest run",
     "test:coverage": "LANG=en-US vitest run --coverage",
     "test:watch": "LANG=en-US vitest watch"
