test: adjust tests + also test non-DOM environment
Signed-off-by: Ferdinand Thiessen <opensource@fthiessen.de>

--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix lib tests",
     "prerelease:format-changelog": "node build/format-changelog.mjs",
-    "test": "LANG=en-US vitest run",
+    "test": "npm run test:dom && npm run test:node",
     "test:coverage": "LANG=en-US vitest run --coverage",
+    "test:dom": "LANG=en-US vitest run",
+    "test:node": "LANG=en-US vitest run --environment node",
     "test:watch": "LANG=en-US vitest watch"
   },
   "browserslist": [
