--- a/package.json
+++ b/package.json
@@ -73,7 +73,16 @@
     "vitest": "^3.0.5"
   },
   "engines": {
-    "node": "^22.0.0",
-    "npm": "^10.5.1"
+    "node": "^20 || ^22 || ^24"
+  },
+  "devEngines": {
+    "packageManager": {
+      "name": "npm",
+      "version": "^10.6.0"
+    },
+    "runtime": {
+      "name": "node",
+      "version": "^22"
+    }
   }
 }
