--- a/package.json
+++ b/package.json
@@ -58,12 +58,13 @@
   },
   "devDependencies": {
     "@nextcloud/browserslist-config": "^3.0.1",
-    "@nextcloud/eslint-config": "^8.4.2",
+    "@nextcloud/eslint-config": "^9.0.0-rc.2",
     "@nextcloud/vite-config": "^2.3.5",
     "@types/escape-html": "^1.0.4",
     "@types/gettext-parser": "^8.0.0",
     "@types/node": "^24.0.10",
     "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.30.1",
     "gettext-parser": "^8.0.0",
     "jsdom": "^26.1.0",
     "msw": "^2.10.3",
