--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"moduleResolution": "Bundler",
 		"outDir": "./dist",
 		"allowImportingTsExtensions": true,
+		"allowSyntheticDefaultImports": true,
 		"declaration": true,
 		"emitDeclarationOnly": true,
 		"strict": true,
