--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
     "node": "^20 || ^22 || ^24"
   },
   "devEngines": {
-    "packageManager": {
-      "name": "npm",
-      "version": "^11.3.0"
-    },
+    "packageManager": [
+      {
+        "name": "npm",
+        "version": "^11.3.0"
+      }
+    ],
     "runtime": {
       "name": "node",
       "version": "^24"
