ci(dependabot): ensure vitest is updated as a group
Signed-off-by: Ferdinand Thiessen <opensource@fthiessen.de>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,12 @@ updates:
     - "type: dependencies"
   open-pull-requests-limit: 10
   versioning-strategy: increase
+  groups:
+    vite:
+      patterns:
+        - "vite"
+        - "@nextcloud/vite-config"
+    vitest:
+      patterns:
+        - "vitest"
+        - "@vitest/*"
