fix: make lib side effects free
Signed-off-by: Grigorii K. Shartsev <me@shgk.me>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "GPL-3.0-or-later",
   "author": "Nextcloud GmbH and Nextcloud contributors",
+  "sideEffects": false,
   "type": "module",
   "exports": {
     ".": {
