--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "msw": "^2.12.4",
     "typedoc": "^0.28.15",
     "typedoc-plugin-missing-exports": "^4.1.2",
+    "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vitest": "^4.0.10"
   },
